[FIX] 완료된 목록 n일전 표시
- ConfirmedAndCanceld에도 createdAt추가
- 완료된 목록도 n일전 표시

--- a/app/src/main/res/layout/item_notification_done.xml
+++ b/app/src/main/res/layout/item_notification_done.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
-            android:text="@string/noti_day"
+            setNotiDay="@{doneData.createdAt}"
             android:textColor="@color/gray04"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
