--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -118,6 +118,7 @@
                     android:layout_marginEnd="9dp"
                     android:orientation="vertical"
                     android:overScrollMode="never"
+                    android:background="@color/white"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
