[FEAT] 갤러리 들어가서 사진 원형으로 받아오기

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -47,6 +47,7 @@
                 android:id="@+id/iv_mypage_profile"
                 android:layout_width="99dp"
                 android:layout_height="99dp"
+                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/ic_img_list_null" />
 
             <ImageView
