[CHORE] xml 수정 및 파일 이동

--- a/app/src/main/res/layout/activity_change_pw.xml
+++ b/app/src/main/res/layout/activity_change_pw.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.home.ChangePwActivity">
+    tools:context=".ui.mypage.ChangePwActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout5"
@@ -84,6 +84,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/et_newpw" />
 
+        <TextView
+            android:id="@+id/tv_pw_warning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="3dp"
+            android:textColor="@color/pink01"
+            app:layout_constraintStart_toStartOf="@+id/et_check_pw"
+            app:layout_constraintTop_toBottomOf="@+id/et_check_pw" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_save"
             android:layout_width="60dp"
@@ -97,5 +107,6 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_check_pw" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
