--- a/app/src/main/res/layout/fragment_dialog_resign.xml
+++ b/app/src/main/res/layout/fragment_dialog_resign.xml
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:background="@color/white"
-                app:layout_constraintDimensionRatio="280:160"
+                app:layout_constraintDimensionRatio="280:122"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cl_resign_dialog_top">
@@ -53,11 +53,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginEnd="97dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginEnd="54dp"
                     android:fontFamily="@font/spoqa_han_sans_neo_bold"
                     android:letterSpacing="-0.01"
-                    android:text="회원탈퇴 시\n저장된 모든 정보가 삭제되며\n복구가 불가능합니다.\n진행하시겠어요?"
+                    android:text="저장된 모든 정보가\n삭제되며 복구가 불가능합니다.\n진행하시겠어요?"
                     android:textColor="@color/gray05"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -69,8 +69,8 @@
                     android:id="@+id/btn_resign_yes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="31dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="22dp"
+                    android:layout_marginBottom="20dp"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:gravity="center_horizontal"
                     android:letterSpacing="-0.01"
@@ -78,7 +78,7 @@
                     android:paddingTop="14dp"
                     android:paddingEnd="10dp"
                     android:paddingBottom="14dp"
-                    android:text="네 탈퇴할게요"
+                    android:text="탈퇴"
                     android:textColor="@color/gray06"
                     android:textSize="16sp"
                     android:textStyle="normal"
@@ -90,9 +90,9 @@
                     android:id="@+id/btn_resign_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="31dp"
+                    android:layout_marginTop="22dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="20dp"
                     android:fontFamily="@font/spoqa_han_sans_neo_medium"
                     android:gravity="center_horizontal"
                     android:letterSpacing="-0.01"
@@ -100,7 +100,7 @@
                     android:paddingTop="14dp"
                     android:paddingEnd="10dp"
                     android:paddingBottom="14dp"
-                    android:text="다음에 할게요"
+                    android:text="다음에"
                     android:textColor="@color/pink01"
                     android:textSize="16sp"
                     android:textStyle="normal"
