--- a/app/src/main/res/layout/toast_custom.xml
+++ b/app/src/main/res/layout/toast_custom.xml
@@ -4,7 +4,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="26dp"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="#cc000000"
         app:cardCornerRadius="5dp">
 
@@ -21,11 +21,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
-                android:text="Hello World!"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:textStyle="normal"
-                android:textSize="13sp"
                 android:textColor="#ffffff"
+                android:textSize="13sp"
+                android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
